# ffnotes

./: .gitignore
PCM2AACffmpeg/: CMakeLists.txt  NOTES.md  audio.cpp  audiovideo.cpp  defines.h  example.cpp  examplecopy.cpp  ffincludes.h  video.cpp
ffmpegStaticLinking/: main.c  notes.txt  run.sh
filtersFFmpeg/: CMakeLists.txt  audiomd5.cpp  classTextScroll.cpp  filterImage.cpp  filterVideo.cpp  overlayFilter.cpp  overlayFilterVideo.cpp  resamplefilter.cpp  textFrameScroll.cpp  textScroll.cpp
